--- a/Index.html
+++ b/Index.html
@@ -7,9 +7,9 @@
   
 </header>
 
-<div id="cabecario">
+<div class="cabecario">
 <h1>Bem vindo!</h1>
   
 </div>
 
-<div id="corpo"></div>
+<div class="corpo"></div>
