--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 				</div>
 				<div class="p1Img1">
 					
-						<a href="https://profile.indeed.com/p/steniov-rzm4q4b"><img src="C:\Users\gumel\Desktop\Tudo\tenor.gif"; width=90%; height=90%;></a>
+						<a href="https://profile.indeed.com/p/steniov-rzm4q4b"><img src="root\ImgesFolder\GifTeste.gif"; width=90%; height=90%;></a>
 				</div>
 			</div>
 			<div class="p1">
