--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 	<body>
 		<header>
 			
-			<link rel="stylesheet"  href="Styles/temaEscuro1Android.css">
-			<link rel="stylesheet"  media=" (min-width:640px)" href="Styles/temaEscuro1Pc.css">
+			<link rel="stylesheet"  href="Styles/temaEscuro1.css">
+			
 		
 			<script>
+				
 				//document.body.style.backgroundColor = 50,50,50;
 			</script>
 		</header>
