--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 				Bem vindo(a)!
 				</h1>
 				<div id="menuBotao">
-					<button id="botaoBotao" >=</button>
-		
+					<button class="botoes-De-Menu" id="botaoBotao" >=</button>
+					<button class="botoes-De-Menu" id="botaoBotao2" disabled >Mudar Linguagem<span style="font-size:10px;">(Indisponivel no momento)</span></button>
+					<button class="botoes-De-Menu" id="botaoBotao3" disabled >Mudar esquema de cores<span style="font-size:10px;">(Indisponivel no momento)</span></button>
+
 				</div>
 				
 			</div>
